# course_4_Parser_Vacansion

./: README.md  main.py  pyproject.toml  settings.py  utils.py
classes/: abstract.py  hh.py  superjob.py  vacancy.py
data/: vacancies.json
